--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,9 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
   <title>{% block title_block %} Social {% endblock %}</title> 
 
   {% block css_block %}
@@ -60,7 +62,7 @@
 </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'App_Login:logout' %}"><i class="fa fa-sign-out" style="font-size:30px; color: red"></i></a>
+        <a class="nav-link" href="{% url 'App_Login:logout' %}"><i class="fa fa-sign-out" style="font-size:30px;"></i></a>
       </li>
       &nbsp; &nbsp; 
       <li class="nav-item">
